Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108761

QXkbCommon::keysymToQtKey does not correctly handle punctuation with modifiers under some keyboard layouts

XMLWordPrintable

      In a similar fashion to QTBUG-90611, Qt does not translate some modified key presses (i.e. key presses while a modifier is held) correctly when the current layout is one of several non-English layouts.

      For example, the "`" key (as in QTBUG-90611) generates a ";" in the Czech and Hebrew layouts. When a modifier is held and that key is pressed, in both English and Russian layouts, QXkbCommon::keysymToQtKey() generates Key_QuoteLeft, but under Czech and Hebrew layouts, it generates Key_Semicolon.

      Compare, for example, the same for the ";" QWERTY key - when CTRL is held and that key is pressed under English it generates Key_Semicolon, and the same under both Russian, Czech and Hebrew.

      Other keys that may present issues are QWERTY "q" and "w", which under the Hebrew layout, when CTRL is held generate Key_Slash and Key_Apostrophe (respectively) while under English, Russian and Czech these generate the correct Key_Q and Key_W.

        1. Hebrew_keyboard_layout_(alt_key_combinations_in_blue).png
          18 kB
          Andrey Butirsky
        2. image-2023-09-25-21-55-40-725.png
          130 kB
          Tor Arne Vestbø
        3. image-2023-09-27-15-00-34-210.png
          520 kB
          Tor Arne Vestbø
        4. image-2023-09-27-15-06-28-023.png
          264 kB
          Tor Arne Vestbø
        5. image-2023-09-27-17-03-53-389.png
          520 kB
          Tor Arne Vestbø
        6. image-2023-09-27-17-05-31-815.png
          514 kB
          Tor Arne Vestbø
        7. image-2023-09-27-17-27-42-926.png
          264 kB
          Tor Arne Vestbø
        8. KB_Russian.svg.png
          36 kB
          Andrey Butirsky
        9. KB_United_States-NoAltGr.svg.png
          16 kB
          Andrey Butirsky
        10. Keyboard_layout_Czech.svg.png
          32 kB
          Andrey Butirsky
        For Gerrit Dashboard: QTBUG-108761
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            guss77 Oded Arbel
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes